fix: spacing between buttons in quiz

--- a/frontend/src/styles/Quiz.css
+++ b/frontend/src/styles/Quiz.css
@@ -62,3 +62,8 @@
     background-color: #aeccaa;
     border-radius: 30px;
 }
+
+.quiz-navigation {
+    display: flex;
+    gap: 30px;
+}
